--- a/HTML/nav.css
+++ b/HTML/nav.css
@@ -24,6 +24,57 @@ nav > img {
   padding-right: 20px;
   text-decoration: none;
 }
+/* Nav Ends Here */
+
+
+/* Header starts here */
+header{
+    padding: 30px 60px 30px 60px;
+    background-color: #e3e3e3;
+}
+header > h1{
+    padding-bottom: 20px;
+    color: black;
+    font-weight: 900;
+    font-style: bold;
+    font-size: 20px;
+}
+/* Header ends here */
+
+/* section starts here  */
+section{
+    border-top: 1px solid black;
+    background-color: #e3e3e3;
+    width: 100%;
+    height: 100vh;
+}
+
+section > article {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.article-1{
+    border: 1px solid black;
+    /* background-color: blue; */
+    padding: 30px;
+    width: 30%;
+    display: flex;
+}
+.content > h3{
+    padding-bottom: 10px;
+    
+}
+.content > p {
+    width: 130px;
+    text-align: justify;
+}
+.article-1 > img {
+    padding-right: 20px;
+    width: 200px;
+    height: 300px;
+}
+
 
 #footer {
   margin-top: 280px;
