--- a/Html_Css_Projects/Project_1/style.css
+++ b/Html_Css_Projects/Project_1/style.css
@@ -41,13 +41,13 @@ html,body{
     width: 100%;
     /* height: 40%; */
     /* background-color: red; */
-    padding: 40px 60px;
+    padding: 0px 60px;
 }
 
 #content_center > h1 {
-    font-size: 60px;
+    font-size: 5.6vw;
     font-weight: 400;
-    line-height: 60px;
+    line-height: 5.6vw;
 }
 
 #content_center_in{
@@ -58,9 +58,9 @@ html,body{
     width: 100%;
 }
 #content_center_in > p {
-    font-size: 20px;
+    font-size: 1.5vw;
     font: 600;
-    line-height: 32px;
+    line-height: 2.2vw;
 }
 
 #content_center_in_right{
@@ -99,7 +99,97 @@ html,body{
     height: 50%;
     width: 100%;
     background-image: url(https://bityl.co/Obm7);
-    background-position: 0 30%;
+    background-position: 0 40%;
     background-size: cover;
+
+}
+
+/* Responsiveness */
+
+@media (max-width:600px) {
+    html,body{
+        width: 100%;
+        height: 90%;
+    }
+    
+    #nav{
+        height: 90px;
+        gap: 20px;
+        padding: 0px 20px;
+    }
+    #nav > h4 {
+        font-size: 20px;
+        font-weight: 600;
+    }
+    
+    #nav > i{
+        background-color: black;
+        color: white;
+        font-size: 20px;
+        padding: 10px;
+        border-radius: 50%;
+    }
+    #content_center{
+        width: 100%;
+        /* height: 40%; */
+        /* background-color: red; */
+        padding: 0px 20px;
+    }
+    
+    #content_center > h1 {
+        font-size: 7.6vw;
+        font-weight: 400;
+        line-height: 8.5vw;
+    }
+    
+    #content_center_in{
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        margin-top: 20px;
+        height: 15%;
+        width: 100%;
+    }
+    #content_center_in > p {
+        margin-bottom: 25px;
+        /* background-color: red; */
+        font-size:19px;
+        font-weight: 530;
+        text-align: justify;
+        text-overflow:clip;
+        line-height:22px;
+    }
+    
+    #content_center_in_right{
+        width: 100%;
+    }
+    .aside{
+        background-color: yell ow;
+        padding: 15px 0px;
+        border-top: 1px solid black;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .aside > i{
+        font-size: 20px;
+        font-weight: 550;
+        opacity: 1;
+    }
+    .aside > a {
+        text-decoration: none;
+        color: black;
+        font-size: 20px;
+        font-weight: 500;
+    }
+    #bottom_image{
+        /* height: 50%; */
+        margin-top: 40px;
+        width: 100%;
+        background-image: url(https://bityl.co/Obm7);
+        background-position: 0 30%;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
 
 }
